<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kalan.ozan.weathercodechallenge.MainActivity">


    <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/main_act_title"
            android:textSize="30sp"
            />


    <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/title_text"
            android:gravity="center"
            android:text="@string/main_act_sub_title"
            android:textSize="23sp"
            />

    <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/edge_padding"
            android:layout_marginLeft="@dimen/edge_padding"
            android:layout_below="@+id/sub_title"
            android:elevation="3dp"
            android:drawableRight="@drawable/ic_clear_text"
            android:drawablePadding="@dimen/edge_padding"
            android:padding="@dimen/edge_padding"
            android:background="@android:color/white"
            android:textSize="18sp"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            />

    <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/profile_layout_height"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/search_field"
            android:text="@string/btn_search"
            />

</RelativeLayout>
